fix: adjust layout styles for header text alignment

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -144,7 +144,7 @@
 }
 
 .ty-h1 {
-	@apply scroll-m-20 text-center text-4xl font-extrabold tracking-tight text-balance;
+	@apply scroll-m-20 text-4xl font-extrabold tracking-tight text-balance;
 }
 
 .ty-h2 {
